(task-3): add fine-tuning steps for Amharic NER

--- a/notebooks/03_fine_tune_ner.ipynb
+++ b/notebooks/03_fine_tune_ner.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/lhiwi/ethioMart-ner-project/blob/task-3/notebooks/03_fine_tune_ner.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         "!pip install transformers datasets seqeval evaluate torch"
@@ -614,12 +624,12 @@
         "print(\"Evaluation metrics:\", metrics)\n"
       ],
       "metadata": {
-        "id": "vzWtohgyu8En",
-        "outputId": "b0e16de4-002b-4d58-9f11-ea272c7e54ba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 213
-        }
+        },
+        "id": "vzWtohgyu8En",
+        "outputId": "b0e16de4-002b-4d58-9f11-ea272c7e54ba"
       },
       "id": "vzWtohgyu8En",
       "execution_count": 47,
@@ -703,11 +713,11 @@
         "print(\"✅ Zipped model to final_ner_model.zip\")\n"
       ],
       "metadata": {
-        "id": "Jk3pm8uewi5I",
-        "outputId": "5517c8db-d97a-4c4c-db27-da71cb155616",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Jk3pm8uewi5I",
+        "outputId": "5517c8db-d97a-4c4c-db27-da71cb155616"
       },
       "id": "Jk3pm8uewi5I",
       "execution_count": 50,
@@ -729,12 +739,12 @@
         "files.download(\"final_ner_model.zip\")\n"
       ],
       "metadata": {
-        "id": "4USHpMDIwrXP",
-        "outputId": "085e1a3a-6419-423a-adaa-f9407bf06922",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
-        }
+        },
+        "id": "4USHpMDIwrXP",
+        "outputId": "085e1a3a-6419-423a-adaa-f9407bf06922"
       },
       "id": "4USHpMDIwrXP",
       "execution_count": 51,
@@ -812,11 +822,11 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "p0xYM4MzyB1K",
-        "outputId": "9b7c0a49-b307-4f07-939a-1a7d275005c3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "p0xYM4MzyB1K",
+        "outputId": "9b7c0a49-b307-4f07-939a-1a7d275005c3"
       },
       "id": "p0xYM4MzyB1K",
       "execution_count": 54,
@@ -837,11 +847,11 @@
         "print(\"✅ Copied model to your Google Drive\")"
       ],
       "metadata": {
-        "id": "QoRR3LyHx9Ns",
-        "outputId": "ff8357d8-ec56-4674-b67f-a125a7e918fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QoRR3LyHx9Ns",
+        "outputId": "ff8357d8-ec56-4674-b67f-a125a7e918fd"
       },
       "id": "QoRR3LyHx9Ns",
       "execution_count": 55,
@@ -867,7 +877,8 @@
       "version": "3.11"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
