task-3_fine_tune_ner

--- a/notebooks/03_fine_tune_ner.ipynb
+++ b/notebooks/03_fine_tune_ner.ipynb
@@ -692,6 +692,45 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Cell: Strip out any obsolete widget metadata from all notebooks\n",
+        "import glob\n",
+        "import nbformat\n",
+        "\n",
+        "# Find every .ipynb under notebooks/\n",
+        "for path in glob.glob('notebooks/*.ipynb'):\n",
+        "    nb = nbformat.read(path, as_version=4)\n",
+        "    # Remove any 'widgets' metadata entry from each cell\n",
+        "    for cell in nb.cells:\n",
+        "        if 'widgets' in cell.metadata:\n",
+        "            del cell.metadata['widgets']\n",
+        "    # Overwrite the notebook in place\n",
+        "    nbformat.write(nb, path)\n",
+        "    print(f\"Cleaned widgets metadata in {path}\")\n",
+        "\n",
+        "print(\"✅ All notebooks cleaned.\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N1h8BGNG1bgY",
+        "outputId": "2479a613-006a-43f2-ed34-017d848c7677"
+      },
+      "id": "N1h8BGNG1bgY",
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ All notebooks cleaned.\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
